<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_heading"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView

                android:id="@+id/image_view_cardio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cardio_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/lifting" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_overlay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/lifting"
                android:textColor="@color/white"
                android:textSize="24sp" />


        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_heading">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_squat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/text_view_squat_heading"
                    style="@style/RecordNameTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/squat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_squat_value"
                    style="@style/RecordValueTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="285" />

                <TextView
                    android:id="@+id/text_view_squat_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"

                    style="@style/RecordDateTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_squat_value"
                    tools:text="05/18/2025" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/lightGrey" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_bench_press"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp">

                <TextView

                    android:id="@+id/text_view_bench_press_heading"
                    style="@style/RecordNameTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/bench_press"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_bench_press_value"
                    style="@style/RecordValueTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="225" />

                <TextView
                    android:id="@+id/text_view_bench_press_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/RecordDateTextAppearance"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_bench_press_value"
                    tools:text="05/18/2025" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/lightGrey" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_deadlift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:padding="12dp">

                <TextView
                    android:id="@+id/text_view_deadlift_heading"
                    style="@style/RecordNameTextAppearance"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:text="@string/deadlift"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_deadlift_value"
                    style="@style/RecordValueTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="385" />

                <TextView
                    android:id="@+id/text_view_deadlift_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/RecordDateTextAppearance"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_deadlift_value"
                    tools:text="05/18/2025" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/lightGrey" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_overhead_press"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:padding="12dp">

                <TextView
                    android:id="@+id/text_view_marathon_overhead_press"
                    style="@style/RecordNameTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/overhead_press"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_overhead_press_value"
                    style="@style/RecordValueTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="135" />

                <TextView
                    android:id="@+id/text_view_overhead_press_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/RecordDateTextAppearance"
                    android:layout_marginTop="16dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_overhead_press_value"
                    tools:text="05/18/2025" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/lightGrey" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>